add console log

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://m7mdmar.github.io/Olsen",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -25,8 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "homepage": "https://m7mdmar.github.io/Olsen"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
